--- a/school task/o-i!ryouma.html
+++ b/school task/o-i!ryouma.html
@@ -13,7 +13,7 @@
 <br><br>
 
 <center>
-<img src = "photo0000-3680.jpg"width="30％">
+<img src = "photo0000-3680.jpg"width="200％">
 <br>
 <form>
 <input type= "button" value= "前へ" onClick = "change_photos();">&nbsp;
@@ -22,15 +22,14 @@
 </center>
 <hr>
 
-<img src = "gatag-00012739s.jpg"width="10％">&nbsp;
-<img src ="gatag-00011414s.jpg"width="10％">&nbsp;
-<img src ="gatag-00005420s.jpg"width="10％">&nbsp;
-<img src ="gatag-00012234s.jpg"width="10％">&nbsp;
-<img src ="gatag-00006829s.jpg"width="10％">&nbsp;
+<img src = "gatag-00012739s.jpg"width="100％">&nbsp;
+<img src ="gatag-00011414s.jpg"width="100％">&nbsp;
+<img src ="gatag-00005420s.jpg"width="100％">&nbsp;
+<img src ="gatag-00012234s.jpg"width="100％">&nbsp;
+<img src ="gatag-00006829s.jpg"width="100％">&nbsp;
 
 
-
-
+<body background="YAMAyamasha-09_TP_V.jpg">
 
 
 
