--- a/school task/o-i!ryouma.html
+++ b/school task/o-i!ryouma.html
@@ -59,7 +59,7 @@
 
 <style>
 h2 {
-	color : blue;
+	color : black;
 	/*background : navy;*/
 }
 
@@ -70,8 +70,10 @@ h2 { font-size: 180%; }
 
 	th,td {background :white;  color :navy; }
 
-
-
+p {
+	color : green;
+	/*background : navy;*/
+}
 </style>
 
 <script>
