--- a/school task/o-i!ryouma.html
+++ b/school task/o-i!ryouma.html
@@ -71,7 +71,7 @@ h2 { font-size: 180%; }
 	th,td {background :white;  color :navy; }
 
 p {
-	color :aqua;
+	color :lime;
 	/*background : navy;*/
 }
 </style>
